--- a/src/app/ui/registros/registros.component.html
+++ b/src/app/ui/registros/registros.component.html
@@ -1,190 +1,12 @@
-<!-- <registros-form></registros-form> -->
-<!-- <main >
-    
-    <h3 class="display-5 text-dark">Inserir Registro</h3>
-    <hr><br>
-     aqui é pra adicionar 
-    <form [formGroup]="registroForm" *ngIf="newData" (ngSubmit)="onSubmit()">
-
-        <label for="categoria">Categoria</label>
-        <select name="Categoria" formControlName="categoria" class="form-control" placeholder="Categoria">
-
-            <option value="Serviços" selected> Serviços</option>
-            <option value="Cosmeticos"> Cosméticos</option>
-            <option value="Produtos"> Produtos em geral</option>
-
-        </select>
-
-        <label for="tipo">Tipo</label>
-        <select class="form-group" class="form-control" formControlName="tipo" name="tipoEntrada"
-            placeholder="Entrada/Saída" id="tipo">
-            <option value="Entrada" selected> Entrada</option>
-            <option value="Saida"> Saída</option>
-        </select>
-        <label for="descricao">Descrição</label>
-        <input type="text" id="descricao" class="form-control" formControlName="descricao" name="Descricao">
-        <label for="valor">Valor</label>
-        <input type="text" id="valor" class="form-control" formControlName="valor" name="Valor">
-
-        <br>
-
-        <button type="submit" class="btn btn-default" >Salvar</button>
-
-    </form>
-     editar
-    <form [formGroup]="registroForm" *ngIf="!newData" (ngSubmit)="edit(registro, registro.key)">
-
-        <label for="categoria">Categoria</label>
-        <select name="Categoria" formControlName="categoria" class="form-control" placeholder="Categoria">
-
-            <option value="Serviços" selected> Serviços</option>
-            <option value="Cosmeticos"> Cosméticos</option>
-            <option value="Produtos"> Produtos em geral</option>
-
-        </select>
-
-        <label for="tipo">Tipo</label>
-        <select class="form-group" class="form-control" formControlName="tipo" name="tipoEntrada"
-            placeholder="Entrada/Saída" id="tipo">
-            <option value="Entrada" selected> Entrada</option>
-            <option value="Saida"> Saída</option>
-        </select>
-        <label for="descricao">Descrição</label>
-        <input type="text" id="descricao" class="form-control" formControlName="descricao" name="Descricao">
-        <label for="valor">Valor</label>
-        <input type="text" id="valor" class="form-control" formControlName="valor" name="Valor">
-
-        <br>
-
-        <button type="submit" class="btn btn-default" >Editar</button>
-
-    </form>
-    acaba o editar 
-    <br>
-    <section id="tabs" class="project-tab">
-        <h3 class="display-4 text-dark">Registros</h3>
-        <hr><br>
-        <div>
-            <nav>
-                <div class="nav nav-tabs nav-fill" id="nav-tab" role="tablist">
-                    <a class="nav-item nav-link active" id="nav-todos-tab" data-toggle="tab" href="#nav-todos"
-                        role="tab" aria-controls="nav-todos" aria-selected="true">Todos os Registros</a>
-
-                </div>
-            </nav>
-            <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane show active" style=" border-style: solid; border-width: 1px ;
-                border-color: lightgray;" id="nav-todos" role="tabpanel" aria-labelledby="nav-todos-tab">
-                    <div id="no-more-tables">
-
-                        <table class="col-md-12 table-hover  table-striped table-condensed cf">
-                            <thead class="cf">
-                                <tr>
-                                    <th class="text-dark">Data</th>
-                                    <th class="text-dark">Categoria</th>
-                                    <th class="text-dark">Tipo</th>
-                                    <th class="text-dark">Descrição</th>
-                                    <th class="text-dark">Valor</th>
-                                    <th class="text-white">_ _</th>
-                                </tr>
-                            </thead>
-                        </table>
-                        <div id="scrolltable">
-                        <table>
-                            <tbody>
-                                <tr *ngFor="let registro of todosRegistros |async">
-                                    <td data-title="Data" class="text-dark">{{registro.data_created}}</td>
-                                    <td data-title="Categoria" class="text-dark">{{registro.categoria}}</td>
-                                    <td data-title="Tipo" class="text-dark">{{registro.tipo}}</td>
-                                    <td data-title="Descrição" class="text-dark text-break">{{registro.descricao}}</td>
-                                    <td data-title="Valor" class="text-dark">{{registro.valor}}</td>
-                                    <td data-title="Editar/Deletar" class="text-dark"><button type="button"
-                                            class="btn btn-default fa fa-pencil fa-5"
-                                            (click)="toggleForm()" 
-                                            ></button><button type="button"
-                                            class="btn btn-danger fa fa-trash-o fa-5"
-                                            (click)="delete(registro.key)"></button></td>
-
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        </div>
-
-    </section>
-</main> -->
-<!-- modal -->
-<!-- <div class="modal" id="modalEdit" tabindex="-1" role="dialog">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <form [formGroup]="inserirRegistroForm">
-
-                <table id="example" class="display" style="width:100%">
-                    <thead>
-                        <tr>
-                            <th class="text-white">Data</th>
-                            <th class="text-white">Categoria</th>
-                            <th class="text-white">Tipo do Registro</th>
-                            <th class="text-white">Descrição</th>
-                            <th class="text-white">Valor</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td><input type="text" class="form-control" formControlName="data_created" name="Data"
-                                    id="data_created"></td>
-                            <td>
-                                <select name="Categoria" formControlName="categoria" class="form-control"
-                                    placeholder="Categoria">
-
-                                    <option value="Serviços" selected> Serviços</option>
-                                    <option value="Cosmeticos"> Cosméticos</option>
-                                    <option value="Produtos"> Produtos em geral</option>
-                                </select></td>
-                            <td>
-                                <select class="form-group" class="form-control" formControlName="tipo"
-                                    name="tipoEntrada" placeholder="Entrada/Saída" id="tipo">
-
-                                    <option value="Entrada" selected> Entrada</option>
-                                    <option value="Saida"> Saída</option>
-                                </select></td>
-                            <td><input type="text" id="descricao" class="form-control" formControlName="descricao"
-                                    name="Descricao"></td>
-                            <td><input type="text" id="valor" class="form-control" formControlName="valor" name="Valor">
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-                <br>
-            </form>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" (click)="onSubmit()">Save
-                    changes</button>
-            </div>
-        </div>
-    </div> -->
-<!-- </div> -->
-
 <div  style="padding-top:10px;">
      
   <div >
       <div >
-        <p class="lead">Inserir Registro</p><hr>
+        <h1>Inserir Registro</h1>
         <app-registro></app-registro>
       </div>
       <div>
-          <p class="lead">Registros</p>
+          <h1>Registros</h1>
           <app-registro-list></app-registro-list>
       </div>
     </div>
