--- a/src/styles.scss
+++ b/src/styles.scss
@@ -185,7 +185,7 @@ border-image-slice: 1;
     position: fixed;
     height: 100%;
     width: 100%;
-    background: #272c33;
+    background: #ffffff;
     padding-top: 25vh;
     text-align: center;
     z-index: -1;
