--- a/src/app/ui/registros/registro-list/registro-list.component.html
+++ b/src/app/ui/registros/registro-list/registro-list.component.html
@@ -33,7 +33,7 @@
       </tbody>
     </table>
 
-    <button type="submit" class="button is-info" style="width: 100%; margin-top: 2em;" (click)="scrollToElement(target)">  Voltar ao topo    </button>
+    <button type="submit" class="button is-info" style="width: 100%; margin-top: 2em;" (click)="scrollToElement(topo)">  Voltar ao topo    </button>
   </div>
 
 </body>
