--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,6 @@
 
     <footer class="footer">
         Angular v7.x + Firebase
-        <br>Luiz Henrique Carvalho</a>
+        <br>Luiz Henrique Carvalho
     </footer>
 
