Melhorias no estilo e Instruções

--- a/src/app/ui/home-page/home-page.component.html
+++ b/src/app/ui/home-page/home-page.component.html
@@ -1,6 +1,76 @@
-<h1>Bem vindo</h1>
-
-
-<p>Sou uma aplicação para o controle de registros.</p>
-
-<p>Aqui você irá controlar as entradas e saídas do seu negócio</p>
+<h1>Instruções</h1>
+<hr>
+<div class="panel-group" id="accordion">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                    1 - Começando</a>
+            </h4>
+        </div>
+        <div id="collapse1" class="panel-collapse collapse in">
+            <div class="panel-body">Primeiramente você vai precisar de um login e senha para acesso.
+                Este pode ser solicitado através do email: silveira.lh@gmail.com.</div>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                    2 - Funções</a>
+            </h4>
+        </div>
+        <div id="collapse2" class="panel-collapse collapse">
+            <div class="panel-body">O CashBook possui algumas funcionalidades básicas, como adicionar, editar ou deletar
+                um registro e também a funcionalidade de lembretes.</div>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a class="test" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                    3 - Adicionando um registro</a>
+            </h4>
+        </div>
+        <div id="collapse3" class="panel-collapse collapse">
+            <div class="panel-body">Para adicionar um registro, basta preencher os campos de informação e clicar em
+                adicionar.</div>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
+                    4 - Editando um registro</a>
+            </h4>
+        </div>
+        <div id="collapse4" class="panel-collapse collapse">
+            <div class="panel-body">Para editar um registro, basta clicar em um dos campos de categoria, descrição ou valor, confirmar a edição e alterar suas informações através
+                dos campos do formulário.</div>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse5">
+                    5 - Excluindo um registro</a>
+            </h4>
+        </div>
+        <div id="collapse5" class="panel-collapse collapse">
+            <div class="panel-body">O ícone da lixeira vermelha permite a exclusão do registro selecionado. Após confirmar, seu registro será excluído.</div>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapse6">
+                    6 - Adicionando lembretes</a>
+            </h4>
+        </div>
+        <div id="collapse6" class="panel-collapse collapse">
+            <div class="panel-body">Através do menu no início da página, é possivel ter acesso a aba 'Lembretes'. Para adicionar um lembrete, basta
+                preencher o campo de entrada e clicr em 'Add Lembrete'. Use as setas para cima e para baixo para alterar a quantidade do item adicionado.
+            <p>Para excluir, basta clicar no botão 'Deletar'</p> </div>
+        </div>
+    </div>
+</div>
