--- a/src/app/ui/main-nav/main-nav.component.html
+++ b/src/app/ui/main-nav/main-nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<!-- <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a class="navbar-item" routerLink="/">
             <img src="assets/images/logo.png" width="30px" alt="Firestarter Angular4 Demo App" /> CashBook
@@ -16,13 +16,37 @@
             <a class="navbar-item" routerLink="/login">
         Registros
       </a>
-            <!-- <a class="navbar-item" routerLink="/ssr">
-        SSR Universal
-      </a> -->
             <a class="navbar-item" routerLink="/notes">
         Lembretes
       </a>
             
         </div>
     </div>
+</nav>  -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-item" routerLink="/">
+    <img src="assets/images/logo.png" width="30px" alt="CashBook" /> CashBook
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse " id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="navbar-item" routerLink="/login"> Registros</a>
+      </li>
+      <li class="nav-item">
+        <a class="navbar-item" routerLink="/notes"> Lembretes </a>
+      </li>
+      <li class="nav-item ">
+        <a class="navbar-item" routerLink="/"> Instruções</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Gerar PDF</a>
+      </li>
+    </ul>
+
+  </div>
 </nav>
